--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,18 @@ jobs:
         flutter-version: '3.19.0'
         channel: 'stable'
         
+    - name: Fix audio_kernel.dart errors
+      run: |
+        # إصلاح event.state إلى event.processingState
+        sed -i 's/event\.state == ja\.ProcessingState\.idle/event.processingState == ja.ProcessingState.idle/g' lib/core/audio_kernel.dart
+        
+        # إصلاح ListQueue إلى List
+        sed -i 's/final _playlist = ListQueue<AudioTrack>();/final List<AudioTrack> _playlist = [];/g' lib/core/audio_kernel.dart
+        sed -i 's/final _originalPlaylist = ListQueue<AudioTrack>();/final List<AudioTrack> _originalPlaylist = [];/g' lib/core/audio_kernel.dart
+        
+        # حذف قسم export في النهاية
+        sed -i '/^\/\/ Export key components/,/^FFTProcessor;/d' lib/core/audio_kernel.dart
+        
     - name: Create local.properties
       run: |
         echo "sdk.dir=$ANDROID_HOME" > android/local.properties
@@ -33,11 +45,12 @@ jobs:
         echo "flutter.versionCode=1" >> android/local.properties
         
     - name: Get Flutter dependencies
-      run: flutter pub get
+      run: |
+        flutter pub get
         
     - name: Build APK
       run: |
-        flutter build apk --release
+        flutter build apk --release --no-tree-shake-icons
         
     - name: Upload APK
       uses: actions/upload-artifact@v4
